<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".tokyovisiting2">

    <TextView
        android:id="@+id/textView55"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@drawable/tokyovisiting2"
        android:text="@string/tokyovisiting2"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView57"
                android:layout_width="match_parent"
                android:layout_height="45dp" />

            <Button
                android:id="@+id/buttontokv2"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:text="@string/tv2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/txt" />

            <TextView
                android:id="@+id/textView56"
                android:layout_width="match_parent"
                android:layout_height="601dp"
                android:text="@string/tokyovisiting22"
                android:textSize="@dimen/txt" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>