<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".nationalMuseum">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="265dp"
        android:background="@drawable/tokyomuseumfront"
        android:gravity="bottom"
        android:text="@string/nationalmuseumdesc"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/txtsize" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewtthm1"
                android:layout_width="match_parent"
                android:layout_height="101dp"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/thm1"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/txtsize" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="980dp"
                android:text="@string/museumdesc"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="@dimen/txt" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>